--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,11 +12,10 @@ list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/modules)
 include(cmake/modules/tfel.cmake)
 
 find_package(MFEMMGIS REQUIRED)
-#find_package(TFELMath REQUIRED)
-#include_directories(/home/rp269144/spack/opt/spack/linux-ubuntu22.04-skylake/gcc-11.4.0/tfel-master-u6q5krrbckkhn3ahzrwjils5oijqvfzv/include/)
 
 enable_testing()
 
-add_subdirectory(bubble)
 add_subdirectory(polycrystal)
+add_subdirectory(bubble)
+add_subdirectory(cermet)
 
