move Mono_UO2_CosH_Jaco in the directory polycristal/law

--- a/polycrystal/CMakeLists.txt
+++ b/polycrystal/CMakeLists.txt
@@ -26,7 +26,7 @@ endif(CMAKE_CONFIGURATION_TYPES)
 
 # Copy needed file for execution
 file(COPY
-  ${PROJECT_SOURCE_DIR}/Mono_UO2_CosH_Jaco.mfront
+  ${PROJECT_SOURCE_DIR}/law/Mono_UO2_CosH_Jaco.mfront
   DESTINATION ${PROJECT_BINARY_DIR})
 
 file(COPY law mesh DESTINATION ${PROJECT_BINARY_DIR})
@@ -34,8 +34,8 @@ file(COPY law mesh DESTINATION ${PROJECT_BINARY_DIR})
   # Use mfront to generate libBehaviour.so
 add_custom_command(
   OUTPUT "src/libBehaviour.so"
-  COMMAND mfront --obuild --interface=generic ${PROJECT_BINARY_DIR}/Mono_UO2_CosH_Jaco.mfront
-  DEPENDS ${PROJECT_BINARY_DIR}/Mono_UO2_CosH_Jaco.mfront
+  COMMAND mfront --obuild --interface=generic ${PROJECT_BINARY_DIR}/law/Mono_UO2_CosH_Jaco.mfront
+  DEPENDS ${PROJECT_BINARY_DIR}/law/Mono_UO2_CosH_Jaco.mfront
   COMMENT "Performing mfront code generation")
   
 add_custom_target(generate-libBehaviour-polycrystal ALL
