create the MMOPERAHPC library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ find_package(MFEMMGIS REQUIRED)
 
 enable_testing()
 
+add_subdirectory(src)
 add_subdirectory(polycrystal)
 add_subdirectory(bubble)
 add_subdirectory(cermet)
