apply clang-format

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_library(MMOPERAHPC
+        Utilities.cxx
         GrainOrientations.cxx
         MacroscropicElasticMaterialProperties.cxx
         UniaxialMacroscopicStressPeriodicSimulation.cxx)
