fix path in verification/mmm_XXX + copy verification/mmm_XXX in build

--- a/bubble/CMakeLists.txt
+++ b/bubble/CMakeLists.txt
@@ -1,6 +1,7 @@
 project(OperaHPCBubble)
 
 # behavior law
+file(COPY verification/mmm_vs_analytical.py DESTINATION ${PROJECT_BINARY_DIR})
 
 
 add_custom_command(
@@ -41,5 +42,6 @@ target_link_directories(test-bubble
 file(COPY Elasticity.mfront mesh DESTINATION ${PROJECT_BINARY_DIR})
 
 add_test(NAME BubbleTest COMMAND test-bubble --mesh mesh/mesh_sphere.msh --bubble-file mesh/single_bubble_ci.txt)
+
 
 install(TARGETS test-bubble DESTINATION bin)
