--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
           spack load mfem        
           spack load mfem-mgis
           make -j
-          ctest
+          ctest --rerun-failed --output-on-failure
      
 
           
